--- a/cv.html
+++ b/cv.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>mon cv </title>
+    <title>mon cv</title>
 </head>
 <body>
     <h1>KONTE Ibrahim</h1>
+    <h2> Developpeur web</h2>
+
     
 </body>
 </html>
