--- a/cv.html
+++ b/cv.html
@@ -7,8 +7,12 @@
 </head>
 <body>
     <h1>KONTE Ibrahim</h1>
+
     <h2> Developpeur web</h2>
 
+    <img src="c:\Users\marc_\Downloads\mon profil.jpg" width="200" height="200" alt="profil">
+    
+    <address>Rue du dauphiné bât bruyere appt E8 <br> 78840 FRENEUSE </address>
     
 </body>
 </html>
